--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         /* 메뉴 항목 스타일링 */
         .topnav a {
             float: left;
-            color: #000000;
+            color: #6b6b6b;
             text-align: center;
             padding: 14px 16px;
             text-decoration: none;
@@ -27,8 +27,8 @@
 
         /* 마우스 호버 시 메뉴 항목 스타일링 */
         .topnav a:hover {
-            background-color: #000000;
-            color: rgb(255, 255, 255);
+            background-color: #ffffff;
+            color: rgb(0, 0, 0);
         }
     </style>
 </head>
