--- a/mooni.html
+++ b/mooni.html
@@ -12,7 +12,7 @@
         /* 메뉴 항목 스타일링 */
         .topnav a {
             float: left;
-            color: #000000;
+            color: #6b6b6b;
             text-align: center;
             padding: 14px 16px;
             text-decoration: none;
@@ -27,8 +27,8 @@
 
         /* 마우스 호버 시 메뉴 항목 스타일링 */
         .topnav a:hover {
-            background-color: #000000;
-            color: rgb(255, 255, 255);
+            background-color: #ffffff;
+            color: rgb(0, 0, 0);
         }
     </style>
 </head>
@@ -39,7 +39,7 @@
         <a class="active" href="index.html">홈</a>
         <a href="#">소개</a>
         <a href="#">서비스</a>
-        <a href="#">문의</a>
+        <a href="mooni.html">문의</a>
         <a href="alllimjang.html">알림장 보기</a>
     </div>
 
