--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         }
     </style>
 </head>
+      <link rel="shortcut icon" href="https://lh6.googleusercontent.com/3A_tgkE81u29mXj5h152FyHNy8bmq_93eJdNso6bEEdahjQLCDHKILLu-RxwAVAIGGvtv6Bma2HAZelweB_yg98=w16383" />
 <body>
 
     <!-- 상단바 -->
