--- a/alllimjang.html
+++ b/alllimjang.html
@@ -12,7 +12,7 @@
         /* 메뉴 항목 스타일링 */
         .topnav a {
             float: left;
-            color: #6b6b6b;
+            color: #000000;
             text-align: center;
             padding: 14px 16px;
             text-decoration: none;
@@ -28,12 +28,12 @@
         /* 마우스 호버 시 메뉴 항목 스타일링 */
         .topnav a:hover {
             background-color: #ffffff;
-            color: rgb(0, 0, 0);
+            color: rgb(175, 175, 175);
         }
     </style>
 </head>
-<link rel="shortcut icon" href="https://lh6.googleusercontent.com/3A_tgkE81u29mXj5h152FyHNy8bmq_93eJdNso6bEEdahjQLCDHKILLu-RxwAVAIGGvtv6Bma2HAZelweB_yg98=w16383" />
-<body>
+      <link rel="shortcut icon" href="https://lh6.googleusercontent.com/3A_tgkE81u29mXj5h152FyHNy8bmq_93eJdNso6bEEdahjQLCDHKILLu-RxwAVAIGGvtv6Bma2HAZelweB_yg98=w16383" />
+      
 
     <!-- 상단바 -->
     <div class="topnav">
@@ -44,4 +44,5 @@
         <a href="alllimjang.html">알림장 보기</a>
     </div>
 
-    <iframe src="https://www.hiclass.net/main/clazzes/161a70fc-9873-4853-b68d-2919eb17d946" width="1920" height="1000"></iframe>
+
+<iframe src="https://www.hiclass.net/main/clazzes/161a70fc-9873-4853-b68d-2919eb17d946" width="1920" height="1000"></iframe>
