--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         /* 메뉴 항목 스타일링 */
         .topnav a {
             float: left;
-            color: #6b6b6b;
+            color: #000000;
             text-align: center;
             padding: 14px 16px;
             text-decoration: none;
@@ -28,12 +28,12 @@
         /* 마우스 호버 시 메뉴 항목 스타일링 */
         .topnav a:hover {
             background-color: #ffffff;
-            color: rgb(0, 0, 0);
+            color: rgb(175, 175, 175);
         }
     </style>
 </head>
       <link rel="shortcut icon" href="https://lh6.googleusercontent.com/3A_tgkE81u29mXj5h152FyHNy8bmq_93eJdNso6bEEdahjQLCDHKILLu-RxwAVAIGGvtv6Bma2HAZelweB_yg98=w16383" />
-<body>
+      
 
     <!-- 상단바 -->
     <div class="topnav">
@@ -48,3 +48,7 @@
     <div>
         <h1>changkyungplanet</h1>
         <p>만드는 중입니다.</p>
+
+
+
+        <meta http-equiv="refresh" content="0;url=http://sites.google.com/view/changkyungplanets">
