--- a/mooni.html
+++ b/mooni.html
@@ -12,7 +12,7 @@
         /* 메뉴 항목 스타일링 */
         .topnav a {
             float: left;
-            color: #6b6b6b;
+            color: #000000;
             text-align: center;
             padding: 14px 16px;
             text-decoration: none;
@@ -28,12 +28,12 @@
         /* 마우스 호버 시 메뉴 항목 스타일링 */
         .topnav a:hover {
             background-color: #ffffff;
-            color: rgb(0, 0, 0);
+            color: rgb(175, 175, 175);
         }
     </style>
 </head>
-<link rel="shortcut icon" href="https://lh6.googleusercontent.com/3A_tgkE81u29mXj5h152FyHNy8bmq_93eJdNso6bEEdahjQLCDHKILLu-RxwAVAIGGvtv6Bma2HAZelweB_yg98=w16383" />
-<body>
+      <link rel="shortcut icon" href="https://lh6.googleusercontent.com/3A_tgkE81u29mXj5h152FyHNy8bmq_93eJdNso6bEEdahjQLCDHKILLu-RxwAVAIGGvtv6Bma2HAZelweB_yg98=w16383" />
+      
 
     <!-- 상단바 -->
     <div class="topnav">
@@ -44,7 +44,8 @@
         <a href="alllimjang.html">알림장 보기</a>
     </div>
 
+
     <!-- 내용 -->
     <div>
         <h1></h1>
-        <p>문의: shinjaewons0227@gmail.com</p>
+        <p>문의: shinjaewons0227@gmail.com  주말은 회신되지 않습니다.</p>
