--- a/index.html
+++ b/index.html
@@ -51,4 +51,4 @@
 
 
 
-        <meta http-equiv="refresh" content="0;url=http://sites.google.com/view/changkyungplanets">
+        <meta http-equiv="refresh" content="0;url=https://changkyungplanets.notion.site/changkyungplanet-c21600f29d8d4486abd147fdb70d2308">
